[metadata]
name = slash
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
summary = A Modern Testing Framework for Large-scale Projects
description-file =
    README.md
description-content-type = text/markdown
license = BSD
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = http://getslash.github.io/

[files]
package_data =
    slash.plugins.builtin =
        email_template.j2

[entry_points]
console_scripts =
    slash  = slash.frontend.main:main_entry_point

[extras]
testing =
    coverage
    coveralls
    munch
    pytest
    pytest-catchlog
    pytest-cov
    pytest-timeout
    pyforge
    pylint~=1.7.0
doc =
    alabaster
    docutils
    releases
    Sphinx>=1.7.1

[tool:pytest]
testpaths = tests
