[metadata]
name = slash
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
summary = A Modern Testing Framework for Large-scale Projects
description-file =
    README.md
description-content-type = text/markdown
license = BSD
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = http://getslash.github.io/

[files]
package_data =
    slash.plugins.builtin =
        email_template.j2

[entry_points]
console_scripts =
    slash  = slash.frontend.main:main_entry_point

[extras]
testing =
    coverage
    coveralls
    munch
    pytest
    pytest-catchlog
    pytest-cov
    pytest-timeout
    pyforge
    astroid~=2.3.2
    pylint~=2.4.3
doc =
    alabaster
    docutils
    # All bellow pinning is due to: https://github.com/bitprophet/releases/issues/84
    semantic-version==2.6.0
    releases~=1.6.1
    Sphinx~=1.7.1

[tool:pytest]
testpaths = tests
