[metadata]
name = slash
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
summary = A Modern Testing Framework for Large-scale Projects
description-file =
    README.md
description-content-type = text/markdown
license = BSD
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = http://getslash.github.io/

[files]
package_data =
    slash.plugins.builtin =
        email_template.j2

[entry_points]
console_scripts =
    slash  = slash.frontend.main:main_entry_point

[extras]
testing =
    coverage
    coveralls
    munch
    pytest
    pytest-cov
    pytest-timeout
    pyforge
    astroid~=2.11.7
    pylint~=2.14.4
doc =
    alabaster
    docutils
    releases~=1.6.1
    Sphinx

[tool:pytest]
testpaths = tests
timeout_method = signal
addopts = -ra -W error::DeprecationWarning
